<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/button_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:columnCount="4">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/theme_one"
        android:fontFamily="@font/supermercado"
        android:backgroundTint="@color/blue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/theme_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/theme_one"
        android:fontFamily="@font/supermercado"
        android:backgroundTint="@color/grey"/>

    <TextView
        android:id="@+id/input_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margin"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline1"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/result_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:layout_margin="@dimen/default_margin"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textSize="48sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_one"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_one" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_two"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_three"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_three" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_divide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_four"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_four" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_five"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_five" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_six"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_six" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_multiply" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_seven"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_seven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_eight"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_eight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_nine"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_nine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clean"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_clean" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/number_zero"
        style="@style/Button.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/key_zero" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dot"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_dot" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        style="@style/Button.Operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/key_equals" />

</GridLayout>